# signalgrid-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RUNBOOK.md  evaluation.xml  pyproject.toml  server.py  verify.sh
.github/workflows/: ci.yml  release.yml
src/signalgrid_mcp/: __init__.py  app.py  formatting.py  runner.py  server.py  sourcing.py
src/signalgrid_mcp/tools/: __init__.py  apps.py  backup.py  codesign.py  identity.py  launchd.py  mdm.py  network.py  processes.py  removable_media.py  report.py  screen_lock.py  security.py  software.py  sysext.py  users.py  verdict.py
tests/: test_parsers.py  test_posture_contract.py  test_smoke.py  test_sourcing.py
tools/: inspect_stdio.py
